--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -19,6 +23,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.7",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
